<resources>
    <string name="app_name">Orientex</string>
    <string name="your_web_client_id">567908063521-vp6bj27dqhijk03vn25rto445ap46u1u.apps.googleusercontent.com</string>
    <string name="signin_button">Sign In</string>
    <string name="title_activity_logged_in_view">Logged_In_View</string>
    <string name="title_home">Home</string>
    <string name="title_quests">Quests</string>
    <string name="title_profile">Profile</string>
    <string name="continueButton">Continue</string>

    <!-- Quest Information (from database later) -->
    <string name="introTitle">Introduction: Orientex</string>
    <string name="introDesc">Welcome to UWF! \n\nWe\'ll be your guide to student orientation. \n\nPlease click the button below to continue</string>
    <string name="quest1Title">Quest 1: HMCSE - Building 4</string>
    <string name="quest1Desc">This is building 4, the Hal Marcus Computer Science and Engineering building.\n\nThis will be our focus for this application.\n\nPlease click the button below to proceed.</string>
    <string name="quest2Title">Quest 2: Dr. OK\'s Office (Room 435)</string>
    <string name="quest2Desc">Next is the office of Dr. Bernd Owsnicki-Klewe, otherwise known as Dr. OK.\n\nPlease make your way to the fourth floor and scan the QR Code for his office\n\nPlease click the button to continue.</string>
    <string name="quest3Title">Quest 3: Classroom 349</string>
    <string name="quest3Desc">Make your way down to the third floor. \n\nThis is classroom 349, used by several professors for many courses.\n\nPlease click the button and scan the QR code to continue on your quest.</string>
    <string name="quest4Title">Quest 4: Orientation Quiz</string>
    <string name="quest4Desc">Now that you\'ve finished your orientation, please click the button below to take the quiz to complete your orientation quest.</string>
    <string name="congratsTitle">Congratulations!</string>
    <string name="congratsDesc">You\'ve completed orientation!</string>

    <!-- Profile Info -->
    <string name="completedTitle">Quests Completed:</string>
    <string name="completedTextDefault">0</string>
    <string name="defaultEmail">default@students.uwf.edu</string>

    <!-- Questions for quiz -->
    <string name="quizTitle">Quest 4: Quiz</string>
    <string name="quizButton">Submit</string>

    <string name="question1">1. What is the name of the building?</string>
    <string name="q1_answer1">Campus Green</string>
    <string name="q1_answer2">Hal Marcus Computer Science and Engineering</string>
    <string name="q1_answer3">I/O &amp; Circuits</string>
    <string name="q1_answer4">Computer Science and Circuitry</string>

    <string name="question2">2. What floor is Dr. OK\'s office on?</string>
    <string name="q2_answer1">First</string>
    <string name="q2_answer2">Second</string>
    <string name="q2_answer3">Third</string>
    <string name="q2_answer4">Fourth</string>

    <string name="question3">3. What is the number of the classroom?</string>
    <string name="q3_answer1">349</string>
    <string name="q3_answer2">242</string>
    <string name="q3_answer3">320</string>
    <string name="q3_answer4">122</string>

</resources>