<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/quizView"
    tools:context=".Quiz">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quizTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quizTitle"
            android:textAlignment="center"
            android:textColor="@color/uwf_blue"
            android:textSize="24sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question1"
                    android:layout_width="410dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textAlignment="center"
                    android:textColor="@color/uwf_blue"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <RadioGroup
                    android:id="@+id/questionGroup1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q1_answer4" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question2"
                    android:layout_width="410dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textAlignment="center"
                    android:textColor="@color/uwf_blue"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <RadioGroup
                    android:id="@+id/questionGroup2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_answer1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_answer2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_answer3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q2_answer4" />
                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/question3"
                    android:layout_width="410dp"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textAlignment="center"
                    android:textColor="@color/uwf_blue"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <RadioGroup
                    android:id="@+id/questionGroup3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer1" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer2" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer3" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/q3_answer4" />


                </RadioGroup>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/quizButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/quizButton" />
            </TableRow>
        </TableLayout>

    </LinearLayout>
</ScrollView>